# routes/products.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const productsController = require('../controllers/products');
+const { requireJWT } = require('../middleware/auth');
 
 // Get all products
 router.get('/', productsController.getAll)
@@ -9,12 +10,12 @@ router.get('/', productsController.getAll)
 router.get('/:id', productsController.getSingle);
 
 // Create a new product
-router.post('/', productsController.createProduct);
+router.post('/', requireJWT, productsController.createProduct);
 
 // Update a product
-router.put('/:id', productsController.updateProduct);
+router.put('/:id', requireJWT, productsController.updateProduct);
 
 // Delete a product
-router.delete('/:id', productsController.deleteProduct);
+router.delete('/:id', requireJWT, productsController.deleteProduct);
 
 module.exports = router;
